# config-loader

./: .gitignore  CLAUDE.md  LICENSE  README.md  config-loader.code-workspace  pyproject.toml
.github/workflows/: pytest.yml
configs/: person-config.yaml
src/: __init__.py  configs.py  main.py  mixins.py
tests/: conftest.py  test_configs.py  test_mixins.py
